Fill test settings with CORS